package com.company;

public interface IMenuOption {
    void onClick();
}
