package com.company;

public class Main {

    public static void main(String[] args) {
        Engine engine = new Engine();
        engine.start();
    }
}
