@startuml

title __PR4's Class Diagram__\n

  package com.company {
    class Answer {
    }
  }
  

  package com.company {
    class Engine {
    }
  }
  

  package com.company {
    interface IMenuOption {
    }
  }
  

  package com.company {
    interface IQuestion {
    }
  }
  

  package com.company {
    interface ITest {
    }
  }
  

  package com.company {
    class Input {
    }
  }
  

  package com.company {
    class Main {
    }
  }
  

  package com.company {
    class Menu {
    }
  }
  

  package com.company {
    class Option {
    }
  }
  

  package com.company {
    class Printer {
    }
  }
  

  package com.company {
    class Question {
    }
  }
  

  package com.company {
    class SchoolSystem {
    }
  }
  

  package com.company {
    class Student {
    }
  }
  

  package com.company {
    class Teacher {
    }
  }
  

  package com.company {
    class Test {
    }
  }
  

  package com.company {
    abstract class User {
    }
  }
  

  Engine o-- SchoolSystem : schoolSystem
  Engine o-- Menu : initMenu
  Option o-- IMenuOption : menuOption
  Question -up-|> IQuestion
  SchoolSystem o-- Menu : studentMenu
  SchoolSystem o-- Menu : teacherMenu
  SchoolSystem o-- Menu : defaultMenu
  Student -up-|> User
  Student o-- UserType : type
  Teacher -up-|> User
  Teacher o-- UserType : type
  Test -up-|> ITest
  Test o-- Subjects : subject
  User o-- SchoolSystem : schoolSystem


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
